alignment issue

--- a/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
+++ b/src/app/features/gis/components/quotation/components/quick-quote-form/quick-quote-form.component.css
@@ -267,5 +267,14 @@ letter-spacing: 0%;
 .btn-close.text-danger {
   opacity: 1; /* make the red icon more visible */
 }
+.btn-close:focus,
+.btn-close:active,
+.btn-close:focus-visible {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+
+
 
 
