--- a/src/app/features/gis/components/quotation/components/quoute-summary/quote-summary.component.css
+++ b/src/app/features/gis/components/quotation/components/quoute-summary/quote-summary.component.css
@@ -291,6 +291,20 @@ color: #000000;
   vertical-align: middle;
 }
 
+#btn-close {
+  color: #EE3945 !important;
+   background: none;
+  border: none;
+  font-size: 32px;
+}
+.btn-close:focus,
+.btn-close:active,
+.btn-close:focus-visible {
+  outline: none !important;
+  box-shadow: none !important;
+  border: none !important;
+}
+
 
 
 /* Responsive */
